<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@color/colorPrimary"
         android:padding="8dp">

         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/flag"
             style="@style/HeaderText" />

         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/quantity"
             style="@style/HeaderText" />

         <TextView
             android:id="@+id/buyPrice"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/price"
             style="@style/HeaderText" />

         <TextView
             android:id="@+id/sellPrice"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             style="@style/HeaderText" />

     </LinearLayout>

     <ListView
         android:id="@+id/list"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:dividerHeight="0.5dp"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="8dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/noDataNotification"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:textAlignment="center">

        <ImageView
            android:src="@drawable/ic_no_signal"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="No Internet Connection"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="To access the latest rates, you need to be connetced to the Internet."
            android:layout_gravity="center"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="Try Again!"
            android:textColor="@color/colorAccent"
            android:paddingTop="8dp"/>

    </LinearLayout>

 </LinearLayout>